--- a/css/app.css
+++ b/css/app.css
@@ -73,3 +73,11 @@ h1:hover .tooltip {
 #app {
     width: 90%;
 }
+
+#forecast{
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+}
