--- a/css/app.css
+++ b/css/app.css
@@ -74,10 +74,10 @@ h1:hover .tooltip {
     width: 90%;
 }
 
-#forecast{
+/* #forecast{
     padding: 0;
     margin: 0;
     display: flex;
     justify-content: space-between;
     list-style-type: none;
-}
+} */
